testing_temp/temp-compiler_output__Length_Adimensional_uint64_float64_True_True_4471071044020246355_True_True__.txt
testing_temp\temp-test__Length_Adimensional_uint64_float64_True_True_4471071044020246355_True_True__.cpp: In function 'int main(int, char**)':
testing_temp\temp-test__Length_Adimensional_uint64_float64_True_True_4471071044020246355_True_True__.cpp:11:69: error: invalid operands of types 'uint64_t {aka long long unsigned int}' and 'double' to binary 'operator%'
             std::uint64_t bi_a = 7;double bi_b = 2;auto bi_c = bi_a % bi_b;uint64<Length> lt_a(7);float64<Adimensional> lt_b(2);auto lt_c = lt_a + lt_b;std::cout << bi_c == lt_c.value << std::endl;std::cout << std::is_same<decltype(bi_c), decltype(lt_c.value)>::result;
                                                                ~~~~~^~~~~~
testing_temp\temp-test__Length_Adimensional_uint64_float64_True_True_4471071044020246355_True_True__.cpp:11:148: error: invalid use of incomplete type 'struct dim_analysis::Unmatched_dimensions_in_addition_between<long long unsigned int, Dimensions<std::ratio<1ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> >, double, Dimensions<std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> > >'
             std::uint64_t bi_a = 7;double bi_b = 2;auto bi_c = bi_a % bi_b;uint64<Length> lt_a(7);float64<Adimensional> lt_b(2);auto lt_c = lt_a + lt_b;std::cout << bi_c == lt_c.value << std::endl;std::cout << std::is_same<decltype(bi_c), decltype(lt_c.value)>::result;
                                                                                                                                                    ^~~~
In file included from testing_temp\temp-test__Length_Adimensional_uint64_float64_True_True_4471071044020246355_True_True__.cpp:5:0:
testing_temp\../dimensional_analysis.h:242:26: note: declaration of 'struct dim_analysis::Unmatched_dimensions_in_addition_between<long long unsigned int, Dimensions<std::ratio<1ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> >, double, Dimensions<std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> > >'
   SAME_UNITS_OPERATOR(+, Unmatched_dimensions_in_addition_between)
                          ^
testing_temp\../dimensional_analysis.h:194:94: note: in definition of macro 'SAME_UNITS_OPERATOR'
    template<typename NumT_lhs, typename DimsLhs, typename NumT_rhs, typename DimsRhs> struct ERROR_MESSAGE;\
                                                                                              ^~~~~~~~~~~~~
testing_temp\temp-test__Length_Adimensional_uint64_float64_True_True_4471071044020246355_True_True__.cpp:11:260: error: template argument 1 is invalid
             std::uint64_t bi_a = 7;double bi_b = 2;auto bi_c = bi_a % bi_b;uint64<Length> lt_a(7);float64<Adimensional> lt_b(2);auto lt_c = lt_a + lt_b;std::cout << bi_c == lt_c.value << std::endl;std::cout << std::is_same<decltype(bi_c), decltype(lt_c.value)>::result;
                                                                                                                                                                                                                                                                    ^
testing_temp\temp-test__Length_Adimensional_uint64_float64_True_True_4471071044020246355_True_True__.cpp:11:260: error: template argument 2 is invalid
